fix: image overflow on container on approach page

--- a/src/components/WebsiteTile/website-tile.scss
+++ b/src/components/WebsiteTile/website-tile.scss
@@ -413,7 +413,6 @@ a:hover .bx--tile--dark {
   }
 
   img {
-    margin: auto;
     width: 90%;
 
     @include breakpoint('md') {
